--- a/12月/英语/雅思/雅思词汇.md
+++ b/12月/英语/雅思/雅思词汇.md
@@ -124,15 +124,121 @@ wean the calves had been weaned at five weeks of age
 
 pepper freshly ground pepper
 
-
-
-
-
 ## 12.7
+
+复习
+
+intermediate an intermediate stage of deveolpment
+
+parliament the reform bill was passed by parliament lastweek
+
+foam a foam pillow
+
+division cell division . the division of the treasure
+
+pressure the water pressure may need adjusting
+
+treasure buried treasure
+
+nurture nurtured the forest
+
+stark the room , only with a bed and a chair ,looked stark
+
+posture she maintains an upright posture
+
+corn and corp
+
+clarity Any law to be made requires clarity
+
+architecture study architecture
+
+tempt I was tempted by the dessert menu
+
+compel the president felt compelled to resign because of the scandal
+
+district a tax district
+
+bind the suspect bound the hostage's arms
+
+ensure ensure safety
+
+treadmill endless treadmill of feeding ,washing and nappy-changing
+
+assemble the pupils were assembled in the hall
+
+resemble and assemble
+
+squash the tomatoes at the bottom of the bag had been squashed
+
+amorphous amorphous cloud masses
+
+buckle So pipes tend to buckle and crack
+
+backbone agriculture forms the backbone of the country's economy
+
+stainless decorations in stainless steel and silver
+
+renew My visa needed renewing fir annother six months to continue working here
+
+correspond your account of events does not correspond with hers
+
+
 
 ## 12.8
 
+screw the picture frame is fixed in position with four screws
+
+amorphous
+
+jostle the fans jostled and shoved to get a better view of the stage
+
+buckle the wheels had been badly buckled
+
+tariff imposes tariff
+
+chamber they were having a meeting in the council chamber
+
+seal sealing the envelope
+
+embrace she eagerly embraced the offer
+
+mite A mite is a tiny animal that lives as a parasite on other animals
+
+concrete concrete evidence
+
+leap the dog leaped to the door happily
+
+senior
+
+bulb we need a newd 100-watt bulb
+
+tropical the tropical fish is beautiful
+
+therapy radiation therapy
+
+flora the flora and fauna of the island
+
+stout he was a short and stour man
+
+decipher can you decipher the writing on this letter
+
+mushroom wild mushroom
+
+ash black volcanic ash
+
+barbecue put another steak on the barbecue
+
+silt the lake was filled with silt and eventually became land
+
+alight several building in downtow were set alight
+
+congested roads are heavily congested during rush hours
+
+sinister blade
+
 ## 12.9
+
+
 
 ## 12.10 
 
