--- a/12月/英语/六级/词汇.md
+++ b/12月/英语/六级/词汇.md
@@ -5208,6 +5208,106 @@ drum
 
 underneath
 
+### 12.9
+
+#### 百词斩
+
+passage people walk through the passage
+
+irrespective and respective
+
+metaphorical
+
+arithmetic arithmetic homework
+
+renowned the Eiffel Tower is renowned for its beauty
+
+monotony the monotony of the math teacher
+
+maneuver the pilot can maneuver the helicopter
+
+ration mask ration
+
+ingredient the main ingredient of bread is flour
+
+suspension suspension bridge
+
+denote denote error by red color
+
+murmur he murmured something in his sleep
+
+agony the man is agony when hearing the bad news
+
+flatter I'm flattered for your kind words
+
+negligent the worker is negligent in smoking cigarette with barrels of oil around him
+
+militant the two militant puppies
+
+mansion how huge that mansion is
+
+perseverance perseverance is a very important quality in learning english
+
+entail being a professor entails giving lectures
+
+morale morale is high in the dressing room
+
+midwife the midwife is helping deliver the women's baby
+
+elite a few elites can make it to the top of the pyramid
+
+trillion 50 trillion notes are commonly seen
+
+lottery see if he wound win the lottery
+
+monarchy in a monarchy , the country is ruled by the king or a queen
+
+nitrogen nitrogen makes up most of earth's atmosphere
+
+oar they pulled on the oars to make the boat go faster
+
+meticulous he is meticulous in trimming the plant
+
+amass he has amassed a lot of money over the years
+
+militancy troops being stationed at the border was considered a show of militancy by their neighbors
+
+frantically she is working frantically
+
+obstruct the barricade obstructs the road
+
+notoriety his treason gained him notoriety which was lasted even to this day
+
+treason they were convicted of treason
+
+observatory the observatory was built to observe stars at night
+
+mow I can easily mow the lawn
+
+irrigation irrigation helps provide grassland with water
+
+militia the militia fought for their country
+
+opaque the window is made of opaque glass
+
+founder the founder of modern physics
+
+tape you can stick some tape to the wall to protect it while we paint
+
+operative the operative took his gun after he heard the command
+
+onset the referee's whistle indicates the onset of the game
+
+wither the sunflowers in the field have withered in the sun
+
+rectify I made a mistake , so I quickly rectified it
+
+oppressive an oppressive society
+
+tranquility I prefer the tranquility of coutryside to city life
+
+parish priests and nuns both live and work in the parish
+
 
 
 
