--- a/12月/英语/雅思/雅思词汇.md
+++ b/12月/英语/雅思/雅思词汇.md
@@ -238,7 +238,53 @@ sinister blade
 
 ## 12.9
 
+subordinate all other issues are subordinate to this one
 
+synthesis his book shows a sunthesis of traditional and modern values
+
+evolution the professor studies the evolution of animals
+
+journal I read the paper in a scientific journal
+
+Mercury high levels of mercury in local dolphins
+
+sponge the housewife picked up a sponge to clean the deges of the sink
+
+budget educational budget
+
+stall the car stalled the refused to start again
+
+pamphlet the pamphlet contains information of political opinion
+
+consultant the president's consultant on economic affairs
+
+sector great decline of revenue in the manufacturing sector
+
+fierce a fierce dog
+
+landscape a typical features of the English landscape
+
+entertain she entertained the children with stories
+
+diameter calculate the diameter of the big circle
+
+pilot a fighter pilot
+
+geometry the geometry of a spider's web
+
+marsupial A baby marsupial is carried around in a pouch on the mother's stomach
+
+apt she is apt to take offense .
+
+signature someone had forged her signature on the cheque
+
+thunder the rumbledof distant thunder
+
+unyielding the country is unyielding in its demands for a new treaty
+
+depart flights for hong kong depart from terminal 4
+
+endeavour they always endeavour to please their customers
 
 ## 12.10 
 
