--- a/12月/英语/雅思/雅思词汇.md
+++ b/12月/英语/雅思/雅思词汇.md
@@ -288,6 +288,56 @@ endeavour they always endeavour to please their customers
 
 ## 12.10 
 
+### 复习
+
+approach the sound of an approaching car
+
+accessory It also has a good range of accessories
+
+brood a large brood of children
+
+unyielding
+
+drainage
+
+gorgeous the rosy clouds were gorgeous
+
+motive no motive for the murder
+
+intersection the busy intersection often sees traffic jams and accidents
+
+decent decent second-hand cloths and shoes
+
+convince you'll need to convince them of your enthusiasm for the job
+
+excursion our class will make an excursion to the seaside
+
+deprive the trees outside the windows deprive the house of light
+
+threaten doctors are threatened with violence 
+
+fatigue driver fatigue caused the accident
+
+clamp the wood is held in position by a clamp
+
+commission he commissioned a statue of his wife
+
+### 新
+
+crawl babies crawl on the floor
+
+rear both front and rear of the plane
+
+insignificant an insignificant city on the map
+
+aptitude he has little aptitude for math
+
+appetite the walk gave me  a good appetite
+
+loose a loose button
+
+
+
 ## 12.11
 
 ## 12.12
