--- a/12月/英语/雅思/雅思词汇.md
+++ b/12月/英语/雅思/雅思词汇.md
@@ -340,6 +340,50 @@ loose a loose button
 
 ## 12.11
 
+#### 复习
+
+foil  in gold foil
+
+faculty both faculty and students oppose the policy
+
+canteen the staff canteen
+
+clutch I clutched on the chair for support
+
+tunnel he drives through the tunnel to get to the other side of the city
+
+foul a foul temper
+
+counsel counsel for the defense submitted that his client was clearly innocent
+
+proportion the proportion of female workers
+
+#### 新
+
+venue  the stadium has been specifically designed as a venue for the world championships
+
+sift police will sift through the evidence
+
+fertile there are fertile fields in the river
+
+scent a lovely scent on Valentine's Day
+
+breezed enjoy a gentle breeze on a beautiful day
+
+silt the lake was filled with silt
+
+horror the child screamed in horror
+
+harsh the punishment was harsh
+
+terrace he walked out onto the terrace
+
+assess to assess a patient's needs
+
+flavour the flavour of onions
+
+
+
 ## 12.12
 
 ## 12.13
